fixing build phonegap app task

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -26,10 +26,6 @@ body {
   font-size: 30px !important;
 }
 
-.btn-clicked {
-  background-color: #C32B06;
-}
-
 .modal {
   .modal-header {
     padding-top: 20px;
